// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositorySummary should display default note when no description on click 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,6 +19,15 @@
            class=\\"fa fa-external-link\\"
          />
        </button>
      </div>
    </div>
+   <div
+     class=\\"panel panel--info panel--content description-text\\"
+   >
+     <span
+       class=\\"\\"
+     >
+       No description available...
+     </span>
+   </div>
  </DocumentFragment>"
`;

exports[`RepositorySummary should display description on click 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,6 +19,20 @@
            class=\\"fa fa-external-link\\"
          />
        </button>
      </div>
    </div>
+   <div
+     class=\\"panel panel--info panel--content description-text\\"
+   >
+     <span
+       class=\\"\\"
+     >
+       Awesome React project 
+       <span
+         style=\\"width: 1em; height: 1em; margin: 0px .05em 0px .1em; vertical-align: -0.1em;\\"
+       >
+         😄
+       </span>
+     </span>
+   </div>
  </DocumentFragment>"
`;
